<resources>
    <string name="app_name">E-Tourism</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">E-Tourism</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_note">Note</string>
    <string name="menu_service">Service Catalogue</string>
    <string name="menu_helpline">Helpline</string>
    <string name="menu_about_us">About Us</string>
    <string name="title_activity_home__main">home_MainActivity</string>
    <string name="title_notifications" />
    <string name="title_dashboard" />
    <string name="title_home" />
    <string name="menu_Calender" />
    <string name="menu_tools" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="todo">TODO</string>
    <string name="email_or_username">Email or Username</string>
</resources>
